[package]
name = "corevideor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objr = {git = "https://github.com/drewcrawford/objr.git"}
coregraphicsr = {git = "https://github.com/drewcrawford/coregraphicsr.git"}